syntax = "proto3";
package Example;

message ExampleMessage {
    bool readOnly = 1;
}